--- a/Front-End/src/app/components/editor-container/components/menu/menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/menu.component.html
@@ -7,8 +7,8 @@
     <div class="menu btn">  <app-file></app-file>  </div>
     <div class="menu btn">  <app-progetto></app-progetto>  </div>
     <div class="menu btn">  <app-modifica></app-modifica>  </div>
-    <div class="menu btn">  <app-template></app-template>  </div>
-    <div class="menu btn">  <app-layer></app-layer>  </div>
+    <!-- <div class="menu btn">  <app-template></app-template>  </div> -->
+    <!-- <div class="menu btn">  <app-layer></app-layer>  </div> -->
     <div class="menu btn">  <app-profilo></app-profilo>  </div>
   </div>
 </div>
