--- a/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.css
@@ -51,10 +51,32 @@ ul {
 }
 
 #popup {
-  background-color: darkorange;
-  position: absolute;
   display: none;
-  top: 10vh;
-  left: 25vw;
-  z-index: 9999;
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  z-index: 98;
+  background-color: rgba(153,153,153,0.4);
+  cursor: default;
+  text-align: center;
+}
+#blob {
+  width: 25vw;
+  background-color: dimgrey;
+  color: darkorange;
+  position: relative;
+  margin: auto;
+  margin-top: 200px;
+  padding: 20px;
+  z-index: 100;
+}
+
+#blob input {
+  background-color: rgb(252,248,227);
+  border-color: gold;
+  color: black;
 }
