ORA la lista dei progetti si aggiorna quando se ne salva uno nuovo

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="col-md-8 col-xs-8 list">
     <h3>Lista progetti</h3>
-    <app-proj-list></app-proj-list>
+    <app-proj-list #projLista></app-proj-list>
   </div>
 </div>
 
