Aggiunta funzionalità di aggiornamento progetto
-Aggiunto aggiornamento del progetto lato client
-Modificato un po' il menù file (va messa  apunto la grafica)
-Minor fix lato server per le query

--- a/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.css
@@ -80,3 +80,13 @@ ul {
   border-color: gold;
   color: black;
 }
+
+#update{
+  background:none;
+  color:inherit;
+  border:none; 
+  padding:0;
+  font: inherit;
+  border-bottom:1px solid #444; 
+  cursor: pointer;
+}
