leggera modifica cambio nome classe

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <label>Modifica il nome</label>
+  <label>Modifica nome classe</label>
   <div class="input-group">
     <input type="text" class="form-control" #newName id="newName">
     <span class="input-group-btn">
