--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.css
@@ -1,9 +1,7 @@
 .container {
   position: relative;
   margin: 0;
-  padding: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 20px;
   border-bottom: 1px solid white;
   width: 100%;
 }
