--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
@@ -1,64 +1,72 @@
 <div [hidden]="selemetedMethod" class="container-fluid menu">
-	<div class="row selezionato">
+  <!-- Visualizza il nome del metodo -->
+  <div class="row nomeMetodo">
 		{{ this.activityService.getNameMethod() }}
-	</div>
-	<div class="row">
-		Modifica nome metodo:
-		<input #newName id="newName" >
-		<button class="btn btn-default" (click)="this.changeName(newName.value)">
-      <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-    </button>
-	</div>
+  </div>
+
+  <!-- Modifica il nome del metodo -->
+  <div class="row">
+    <label> Modifica nome metodo: </label>
+    <div class="input-group linea">
+      <input type="text" class="form-control" #newName>
+      <span class="input-group-btn">
+        <button class="btn btn-warning" type="button" (click)="this.changeName(newName.value)">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+      </span>
+    </div>
+  </div>
+
 	<!-- OPERAZIONE -->
-	<div [hidden]="!this.activityService.isOperation()">
-		<div class="container-fluid" [hidden]="this.activityService.isVarDeclaration()">
-			<div class="row">
-				<label>Corpo operazione</label>
-				<input #corpo id="changeName" (keyup.enter)="modBody(corpo.value)">
-				<button class="btn btn-default" (click)="modBody(corpo.value)">
+	<div class="row" *ngIf="this.activityService.isOperation() && !this.activityService.isVarDeclaration()">
+    <label>Corpo operazione</label>
+    <div class="input-group">
+      <input type="text" class="form-control" #corpo (keyup.enter)="this.activityService.modBody(corpo.value)">
+      <span class="input-group-btn">
+        <button class="btn btn-warning" type="button" (click)="this.activityService.modBody(corpo.value)">
           <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
         </button>
-			</div>
-		</div>
-	</div>
+      </span>
+    </div>
+  </div>
+
 	<!-- VARIABILE -->
-	<div [hidden]="!this.activityService.isVarDeclaration()">
-		<div class="container-fluid">
-			<h3>Dichiarazione variabile</h3>
-			<div>
-				<label>Seleziona tipo</label>
-				<select [(ngModel)]="tipoVar">
-          <option *ngFor="let t of types">{{t}}</option>
+	<div class="row" [hidden]="!this.activityService.isVarDeclaration()">
+    <h4>Dichiarazione variabile</h4>
+    <div class="table">
+      <label>Seleziona tipo</label>
+      <select [(ngModel)]="tipoVar">
+        <option *ngFor="let t of types">{{t}}</option>
+      </select>
+    </div>
+    <div class="table">
+      <label>Nome variabile</label>
+      <input #nomeV id="nameVar" [(ngModel)]="nomeVar" (keyup.enter)="declareVar()"><br />
+      <div [hidden]="this.tipoVar != 'String'">
+        <label>Valore</label>
+        <input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
+      </div>
+      <div [hidden]="this.tipoVar != 'char'">
+        <label>Valore</label>
+        <input #valoreV id="valChar" type="text" [(ngModel)]="valVar" maxlength="1" (keyup.enter)="declareVar()">
+      </div>
+      <div [hidden]="this.tipoVar != 'boolean'">
+        <label>Valore</label>
+        <select [(ngModel)]="valVar">
+          <option value="true">true</option>
+          <option value="false">false</option>
         </select>
-			</div>
-			<div class="row">
-				<label>Nome variabile</label>
-				<input #nomeV id="nameVar" [(ngModel)]="nomeVar" (keyup.enter)="declareVar()"><br />
-				<div [hidden]="this.tipoVar != 'String'">
-					<label>Valore</label>
-					<input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
-				</div>
-				<div [hidden]="this.tipoVar != 'char'">
-					<label>Valore</label>
-					<input #valoreV id="valChar" type="text" [(ngModel)]="valVar" maxlength="1" (keyup.enter)="declareVar()">
-				</div>
-				<div [hidden]="this.tipoVar != 'boolean'">
-					<label>Valore</label>
-					<select [(ngModel)]="valVar">
-						<option value="true">true</option>
-						<option value="false">false</option>
-					</select>
-				</div>
-				<div [hidden]="!isNumeric()">
-					<label>Valore</label>
-					<input #valoreV id="valVar" type="number" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
-				</div>
-				<button class="btn btn-default" (click)="declareVar()">
-          <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-        </button>
-			</div>
-		</div>
-	</div>
+      </div>
+      <div [hidden]="!isNumeric()">
+        <label>Valore</label>
+        <input #valoreV id="valVar" type="number" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
+      </div>
+    </div>
+    <button class="btn btn-warning" (click)="declareVar()">
+      Salva <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+    </button>
+  </div>
+
 	<!-- DECISIONE -->
 	<div [hidden]="!this.activityService.isDecision()">
 		<div class="container-fluid">
@@ -173,5 +181,5 @@
 		<button class="btn btn-default" (click)="enterClassMode()">
       <span class="glyphicon glyphicon-arrow-left freccia"></span>
       Diagramma delle Classi</button>
-	</div>
-</div>
+    </div>
+  </div>
