--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
@@ -31,7 +31,7 @@ table {
   color: #333;
 }
 
-.prova {
+.table {
   display: table-cell;
   vertical-align: middle;
   padding: 5px 10px 10px 10px;
