CSS Activity-menu
Per il momento le funzione aggiunte son state sistemate

--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
@@ -36,3 +36,11 @@ table {
   vertical-align: middle;
   padding: 5px 10px 10px 10px;
 }
+
+.upRow {
+  padding-bottom: 5px;
+}
+
+.btnGenera {
+  margin-top: 10px;
+}
