FIX CSS e posizione classi
Ora l’editor e toolbar son 2 elementi staccati, (una volta toolbar era sovrapposto a editor) questo comporta che le posizioni del paper la 0,0 ora corrisponde correttamente all’angolo superiore sx (creare una classe per comprendere)

--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.css
@@ -1,8 +1,9 @@
 #paper {
   position: absolute;
-  width: 73vw;
+  width: calc(73vw - 95px);
   height: 94vh;
   top: 0;
+  left: 95px;
   margin: 0;
   padding: 0;
   overflow: hidden;
