--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-method/class-list-method.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-method/class-list-method.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="this.classMenuService.selectedClass">
-  <button class="btn btn-warning" data-toggle="collapse" data-target="#listaMetodi" (click)='closeCollapsedList()'>
+  <button class="btn btn-warning list" data-toggle="collapse" data-target="#listaMetodi" (click)='closeCollapsedList()'>
     <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>&nbsp;Lista Metodi
   </button>
   <div id="listaMetodi" class="collapse" *ngIf="this.classMenuService.name">
