--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.css
@@ -5,7 +5,8 @@
   margin: 0;
   padding: 0;
   background-color: dimgrey;
-  border-left: 1px solid black;
+  /* border-left: 1px solid black;
+  border-bottom: 1px solid black; */
   text-align: center;
   overflow-y: auto;
 }
