--- a/Front-End/src/app/components/editor-container/editor-container.component.html
+++ b/Front-End/src/app/components/editor-container/editor-container.component.html
@@ -1,9 +1,8 @@
 <!-- component padre che racchiude gli elementi del menù -->
-<div class=".container-fluid">
-<app-menu></app-menu>
-<div class="row">
+<div class="">
+  <app-menu></app-menu>
   <!-- component padre che racchiude gli elementi dell'editor -->
-  <div class="editor">
+  <div class="editor" id="editor">
     <app-editor></app-editor>
   </div>
 </div>
