I misteri dello scroll pt 1

--- a/Front-End/src/app/components/editor-container/editor-container.component.html
+++ b/Front-End/src/app/components/editor-container/editor-container.component.html
@@ -1,5 +1,5 @@
 <!-- component padre che racchiude gli elementi del menù -->
-<div class="">
+<div class="container-fluid">
   <app-menu></app-menu>
   <!-- component padre che racchiude gli elementi dell'editor -->
   <div class="editor" id="editor">
