--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.css
@@ -1,9 +1,9 @@
 #paper {
   position: absolute;
-  width: 92vw;
+  width: calc(100vw - 100px);
   height: 94vh;
   top: 0;
-  left: 8vw;
+  left: 100px;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -21,7 +21,7 @@
 
 .toolbar {
   position: absolute;
-  width: 8vw;
+  width: 100px;
   height: 94vh;
   margin: 0;
   padding: 0;
