--- a/Front-End/src/app/components/editor-container/editor-container.component.css
+++ b/Front-End/src/app/components/editor-container/editor-container.component.css
@@ -1,14 +1,13 @@
-.row {
+.container-fluid {
   margin: 0;
   padding: 0;
-  height: 94vh;
 }
 .editor {
   position: absolute;
   padding: 0;
   margin: 0;
-  border-left: 1px solid black;
-  width: 92vw;
+  width: 100%;
   height: 94vh;
   top: 6vh;
+  overflow: hidden;
 }
