--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
@@ -35,39 +35,49 @@
 
 	<!-- VARIABILE -->
 	<div class="row" *ngIf="this.activityService.isVarDeclaration()">
-			<span [hidden]="!this.activityService.hasBody()">
-				<h4>{{ this.activityService.getBody() }}</h4>
-			</span>
-    <h4>Dichiarazione variabile</h4>
-    <div class="table">
-      <label>Seleziona tipo</label>
-      <select [(ngModel)]="tipoVar">
-        <option *ngFor="let t of types">{{t}}</option>
-      </select>
-    </div>
-    <div class="table">
-      <label>Nome variabile</label>
-      <input #nomeV id="nameVar" [(ngModel)]="nomeVar" (keyup.enter)="declareVar()"><br />
-      <div [hidden]="this.tipoVar != 'String'">
-        <label>Valore</label>
-        <input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
-      </div>
-      <div [hidden]="this.tipoVar != 'char'">
-        <label>Valore</label>
-        <input #valoreV id="valChar" type="text" [(ngModel)]="valVar" maxlength="1" (keyup.enter)="declareVar()">
-      </div>
-      <div [hidden]="this.tipoVar != 'boolean'">
-        <label>Valore</label>
-        <select [(ngModel)]="valVar">
-          <option value="true">true</option>
-          <option value="false">false</option>
-        </select>
-      </div>
-      <div [hidden]="!isNumeric()">
-        <label>Valore</label>
-        <input #valoreV id="valVar" type="number" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
-      </div>
-    </div>
+		<span [hidden]="!this.activityService.hasBody()">
+			<h4>{{ this.activityService.getBody() }}</h4>
+		</span>
+		<h4>Dichiarazione variabile</h4>
+		<button class="btn btn-warning" (click)="toggleModPro()">
+			{{mod}}
+		</button>
+		<div [hidden]="modPro">
+			<h4>Modalità Guidata</h4>
+			<div class="table">
+				<label>Seleziona tipo</label>
+				<select [(ngModel)]="tipoVar">
+					<option *ngFor="let t of types">{{t}}</option>
+				</select>
+			</div>
+			<div class="table">
+				<label>Nome variabile</label>
+				<input #nomeV id="nameVar" [(ngModel)]="nomeVar" (keyup.enter)="declareVar()"><br />
+				<div [hidden]="this.tipoVar != 'String'">
+					<label>Valore</label>
+					<input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
+				</div>
+				<div [hidden]="this.tipoVar != 'char'">
+					<label>Valore</label>
+					<input #valoreV id="valChar" type="text" [(ngModel)]="valVar" maxlength="1" (keyup.enter)="declareVar()">
+				</div>
+				<div [hidden]="this.tipoVar != 'boolean'">
+					<label>Valore</label>
+					<select [(ngModel)]="valVar">
+						<option value="true">true</option>
+						<option value="false">false</option>
+					</select>
+				</div>
+				<div [hidden]="!isNumeric()">
+					<label>Valore</label>
+					<input #valoreV id="valVar" type="number" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
+				</div>
+			</div>
+		</div>
+		<div [hidden]="!modPro">
+			<h4>Modalità Libera</h4>
+			<input type="text" [(ngModel)]="nomeVar" (keyup.enter)="declareVar()">
+		</div>
     <button class="btn btn-warning" (click)="declareVar()">
       Salva <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
     </button>
