--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.css
@@ -29,3 +29,13 @@
   left: 0;
   border-right: 1px solid black;
 }
+
+.boxComment {
+  position: absolute;
+  z-index: 10;
+  width: 27vw;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 73vw;
+}
