--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.html
@@ -9,3 +9,18 @@
 <div class="editClass">
   <activity-menu [hidden]="!mainEditorService.getActivityModeStatus()"></activity-menu>
 </div>
+
+<div class="boxComment" [hidden]='!this.isComment'>
+  <div class="icon">
+    <i class="glyphicon glyphicon-remove-sign close" (click)="this.commentOff()"></i>
+  </div>
+  <label>Modifica commento</label>
+  <div class="input-group">
+    <input type="text" class="form-control" #newCommento id="newCommento">
+    <span class="input-group-btn">
+      <button class="btn btn-warning" type="button" (click)="changeCommento(newCommento.value)">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true" ></span>
+      </button>
+    </span>
+  </div>
+</div>
